--- a/styles/asciidoctor.css
+++ b/styles/asciidoctor.css
@@ -1,3 +1,9 @@
+/* Custom Classes */
+
+.strike {
+    text-decoration-line: line-through;
+}
+
 /* Asciidoctor default stylesheet | MIT License | http://asciidoctor.org */
 /* Uncomment @import statement below to use as custom stylesheet */
 @import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";*/
